; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_arm_cs.c_set_opdir.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_arm_cs.c_set_opdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@R_ANAL_OP_TYPE_MASK = common dso_local global i32 0, align 4
@R_ANAL_OP_DIR_READ = common dso_local global i32 0, align 4
@R_ANAL_OP_DIR_WRITE = common dso_local global i32 0, align 4
@R_ANAL_OP_DIR_REF = common dso_local global i32 0, align 4
@R_ANAL_OP_DIR_EXEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @set_opdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_opdir(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @R_ANAL_OP_TYPE_MASK, align 4
  %7 = and i32 %5, %6
  switch i32 %7, label %24 [
    i32 131, label %8
    i32 130, label %12
    i32 132, label %16
    i32 134, label %20
    i32 133, label %20
    i32 128, label %20
    i32 129, label %20
  ]

8:                                                ; preds = %1
  %9 = load i32, i32* @R_ANAL_OP_DIR_READ, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  br label %25

12:                                               ; preds = %1
  %13 = load i32, i32* @R_ANAL_OP_DIR_WRITE, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 4
  br label %25

16:                                               ; preds = %1
  %17 = load i32, i32* @R_ANAL_OP_DIR_REF, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  br label %25

20:                                               ; preds = %1, %1, %1, %1
  %21 = load i32, i32* @R_ANAL_OP_DIR_EXEC, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  br label %25

24:                                               ; preds = %1
  br label %25

25:                                               ; preds = %24, %20, %16, %12, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
